force-app/main/default/objects/Int_Asset__c/Int_Asset__c.object-meta.xml
<CustomObject>
    <description>Int Asset</description>
    <label>Int Asset</label>
    <nameField>
        <displayFormat>AST-{0000000000}</displayFormat>
        <label>Asset Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>