force-app/main/default/objects/Int_Asset__c/fields/Asset_Recording_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Recording_Method_Code__c</fullName>
    <description>Asset Recording Method Code</description>
    <label>Asset Recording Method Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>