force-app/main/default/objects/Int_Asset__c/fields/Asset_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status_Code__c</fullName>
    <description>Asset Status Code</description>
    <label>Aset Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>