force-app/main/default/objects/Int_Asset__c/fields/Asset_Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type_Number__c</fullName>
    <description>Asset Type Number</description>
    <label>Asset Type Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>