force-app/main/default/objects/Int_Asset__c/fields/Global_Master_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Global_Master_Asset_Type__c</fullName>
    <description>Global Master Asset Type</description>
    <label>Global Master Asset Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>