force-app/main/default/objects/Int_Asset__c/fields/Global_Master_Asset_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Master_Asset_Type_Code__c</fullName>
    <description>Global Master Asset Type Code</description>
    <label>Global Master Asset Type Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>