force-app/main/default/objects/Int_Asset__c/fields/Inventory_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Book_Value__c</fullName>
    <description>Inventory Book Value</description>
    <label>Inventory Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>