force-app/main/default/objects/Int_Asset__c/fields/Inventory_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Sale_Amount__c</fullName>
    <description>Inventory Sale Amount</description>
    <label>Inventory Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>