force-app/main/default/objects/Int_Asset__c/fields/Make_Number__c.field-meta.xml
<CustomField>
    <fullName>Make_Number__c</fullName>
    <description>Make Number</description>
    <label>Make Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>