force-app/main/default/objects/Int_Asset__c/fields/Manufacturing_Year__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Year__c</fullName>
    <description>Manufacturing Year</description>
    <label>Manufacturing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>