force-app/main/default/objects/Int_Asset__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <description>Model Number</description>
    <label>Model Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>