force-app/main/default/objects/Int_Asset__c/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <description>Number Of Units</description>
    <label>Number Of Units</label>
    <length>19</length>
    <type>Text</type>
</CustomField>