force-app/main/default/objects/Int_Asset__c/fields/Object_Category__c.field-meta.xml
<CustomField>
    <fullName>Object_Category__c</fullName>
    <description>Object Category</description>
    <label>Object Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>