force-app/main/default/objects/Int_Asset__c/fields/Object_Category_Number__c.field-meta.xml
<CustomField>
    <fullName>Object_Category_Number__c</fullName>
    <description>Object Category Number</description>
    <label>Object Category Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>