force-app/main/default/objects/Int_Asset__c/fields/Orderly_Liquidation_Value__c.field-meta.xml
<CustomField>
    <fullName>Orderly_Liquidation_Value__c</fullName>
    <description>Orderly Liquidation Value</description>
    <label>Orderly Liquidation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>