force-app/main/default/objects/Int_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Number__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Model__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Make__c</columns>
    <columns>Make_Number__c</columns>
    <columns>Asset_Source_System__c</columns>
    <columns>Asset_Type_Number__c</columns>
    <columns>Asset_Status_Code__c</columns>
    <columns>Asset_Recording_Method_Code__c</columns>
    <columns>Global_Master_Asset_Type_Code__c</columns>
    <columns>Inventory_Book_Value__c</columns>
    <columns>Inventory_Sale_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>